# shield_ai_v2

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  QUICK_START.md  README.md  alembic.ini  bandit_final_report.txt  bandit_report.txt  code_quality_plan.md  coverage.xml  fix_markdown_errors.sh  flake8_final_report.txt  flake8_report.txt  main.py  mypy.ini  mypy_final_report.txt  mypy_report.txt  orchestration_plan.md  pylint_final_report.txt  pylint_report.txt  pyproject.toml  pyrightconfig.json  pytest_final_report.txt  requirements.txt  test_calibration.py  test_data.py  test_forecast.py  test_inventory.xlsx
.github/: dependabot.yml
.github/workflows/: integration-tests.yml  main_ci.yml  release.yml  security.yml  ui_smoke_and_lock.yml
.kilocode/rules/: Ruls_prodject.md  specify-rules.md
.kilocode/workflows/: KiloCode_работа_с_speckit.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 2aacf8c53ae4_initial_migration.py
data/knowledge/: группы и под группы.xlsx
docs/: ARCHITECTURE.md  CLI_INTERFACE.md  EXPORTERS.md  INVENTORY_PARSER.md  Modeli_usushki.md  RUNNING_TESTS.md  STREAMLIT_UI.md  USE_CASES.md  conf.py  index.rst
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
pages/: 0_project_metrics.py  11_documentation.py  1_parse.py  2_calibrate.py  3_forecast.py  4_coefficients.py
results/: movements.json
scripts/: auto_format.sh  fix_code.sh  link_pages.sh
specs/: 003-flat-structure-analysis
specs/002-external-batch-processing/: plan.md  spec.md  tasks.md
specs/002-external-batch-processing/checklists/: requirements.md
specs/004-hierarchical-to-flat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-hierarchical-to-flat/checklists/: requirements.md
specs/004-hierarchical-to-flat/contracts/: flat_record.py  flat_record.txt
specs/03-flat-structure/: analysis.md  analysis_report.md  code-quality-report.md  coverage-analysis.md  data-model.md  final-analysis.md  final-tasks.md  final-verification-report.md  full-check-report.md  plan.md  post-refactor-analysis.md  quickstart.md  research.md  semantic_model_analysis_report.md  spec.md  spec_analysis.py  tasks.md
specs/03-flat-structure/checklists/: implementation.md  requirements.md
specs/03-flat-structure/contracts/: sample_contract.md
specs/04-hierarchical-to-flat/: spec.md  tasks.md
specs/excel_parser/: plan.md  spec.md
specs/fix_markdownlint_errors/: plan.md  spec.md
src/shield_ai/: __init__.py  main_calibrate.py
src/shield_ai/application/: __init__.py
src/shield_ai/application/use_cases/: __init__.py  audit_inventory.py  calibrate_coefficients.py  forecast_shrinkage.py
src/shield_ai/domain/: __init__.py  exceptions.py  repositories.py
src/shield_ai/domain/entities/: __init__.py  batch.py  product.py  shrinkage_profile.py
src/shield_ai/domain/shrinkage/: strategies.py
src/shield_ai/infrastructure/: __init__.py  config.py  export_interfaces.py  logging_config.py
src/shield_ai/infrastructure/database/: __init__.py  base.py  models.py  session.py
src/shield_ai/infrastructure/exporters/: json_exporter.py  markdown_exporter.py  sqlite_exporter.py
src/shield_ai/infrastructure/parsers/: dto.py  hierarchical_excel_parser.py  inventory_parser.py
src/shield_ai/infrastructure/repositories/: calibration_repository.py  coefficient_repository.py  product_repository.py
src/shield_ai/presentation/: __init__.py
src/shield_ai/presentation/cli/: __init__.py  main.py
src/shield_ai/presentation/ui/: __init__.py
src/shield_ai/presentation/ui/pages/: 0_project_metrics.py  10_configuration.py  11_documentation.py  1_parse.py  2_calibrate.py  3_forecast.py  4_coefficients.py  5_shrinkage_analysis.py  6_architecture_viz.py  7_database_management.py  8_cli_integration.py  9_health_monitoring.py
tests/contract/: test_audit.py  test_excel_parser.py  test_json_export.py  test_shrinkage_calculation.py
tests/integration/: test_audit.py  test_calibration.py  test_export.py  test_forecast.py  test_hierarchical_excel_parser.py  test_import.py  test_shrinkage_calculation_integration.py
tests/unit/parsers/: test_hierarchical_excel_parser_units.py
tests/validation/: test_data.py
