[tool.poetry]
name = "shield-ai"
version = "2.0.0"
description = "Intelligent Inventory Management System with AI-powered shrinkage prediction"
authors = ["Denis Egorov <denis.egorov.2017@gmail.com>"]
readme = "README.md"
packages = [{include = "shield_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
alembic = "^1.12"
pandas = "^2.0"
openpyxl = "^3.1"
scipy = "^1.11"
streamlit = "^1.28"
plotly = "^5.17"
python-dotenv = "^1.0"
pydantic = "^2.5"
pydantic-settings = "^2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.0"
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
bandit = "^1.7.0"
safety = "^2.3.0"
pandas-stubs = "^2.3.2.250926"
scipy-stubs = "^1.16.3.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["/test"]
skips = ["B311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["pages/", "test_.*\\.py$"]

[[tool.mypy.overrides]]
module = "pages.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
